--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "joi-phone-number": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.4",
     "nodemon": "^2.0.12"
