--- a/package.json
+++ b/package.json
@@ -16,10 +16,9 @@
     "joi-phone-number": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.4",
-    "nodemon": "^2.0.12"
-  },
-  "devDependencies": {
+    "nodemon": "^2.0.12",
     "dotenv": "^10.0.0",
     "gitignore": "^0.7.0"
   }
+  
 }
